feat: add GitHub button and documentation link
  Add GitHub button and a documentation link to the landing page.

--- a/url-shortner-app/src/public/assets/css/main.css
+++ b/url-shortner-app/src/public/assets/css/main.css
@@ -51,6 +51,13 @@ button {
   color: #333;
 }
 
+#githubButtonWrapper {
+  display: inline-block;
+  position: absolute;
+  left: 32px;
+  bottom: 32px;
+}
+
 /* docs button */
 #docsButtonWrapper {
   display: inline-block;
