feat: create links controller
Implement a controller for managing short links, providing CRUD operations.

--- a/app/src/public/assets/css/main.css
+++ b/app/src/public/assets/css/main.css
@@ -58,7 +58,14 @@ button {
   bottom: 32px;
 }
 
-/* docs button */
+.btn-expand {
+  transition: all 0.3s ease;
+}
+
+.btn-expand:hover {
+  scale: 1.3;
+}
+
 #docsButtonWrapper {
   display: inline-block;
   position: absolute;
